# docx-mcp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  build.rs  build.sh  deny.toml  download_fonts.sh  justfile
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: ci.yml  release.yml
benches/: docx_benchmarks.rs
example/: advanced_usage.md  automation_example.py  claude_examples.md  config_examples.json  test_client.py
scripts/: release.sh  run_tests.sh
src/: advanced_docx.rs  converter.rs  docx_handler.rs  docx_tools.rs  fonts.rs  fonts_cli.rs  lib.rs  main.rs  pure_converter.rs  response.rs  security.rs
tests/: args_tests.rs  converter_tests.rs  docx_handler_tests.rs  e2e_workflow_tests.rs  golden_more_xml_tests.rs  golden_xml_tests.rs  mcp_integration_tests.rs  performance_tests.rs  security_tests.rs
tests/fixtures/: mod.rs  sample_documents.rs  test_data.rs
